--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Summer Wind Stables - hodowla koni pełnej krwi angielskiej</title>
+    <title>Summer Wind Stables - hodowla koni czystej krwi arabskiej</title>
     
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,700i&display=swap" rel="stylesheet"> 
